fix bug 574799, fix quick filter counts when searching over saved searches, r=bienvenu